Updated Layout.astro to use the correct canonical URL format

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ const { title } = Astro.props;
 		<meta name="twitter:image" content="/images/dzaleka-hero.jpeg" />
 		
 		<link rel="icon" type="image/png" href="/images/dzaleka-digital-heritage.png" />
-		<link rel="canonical" href={Astro.url} />
+		<link rel="canonical" href={`https://services.dzaleka.com${Astro.url.pathname}`} />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title} | Dzaleka Online Services</title>
 
