--- a/src/pages/updates.astro
+++ b/src/pages/updates.astro
@@ -46,6 +46,22 @@ const getTypeStyle = (type: Update['type']) => {
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5.882V19.24a1.76 1.76 0 01-3.417.592l-2.147-6.15M18 13a3 3 0 100-6M5.436 13.683A4.001 4.001 0 017 6h1.832c4.1 0 7.625-1.234 9.168-3v14c-1.543-1.766-5.067-3-9.168-3H7a3.988 3.988 0 01-1.564-.317z" />
                 </svg>`
             };
+        case 'data':
+            return {
+                bg: 'bg-teal-100',
+                text: 'text-teal-600',
+                icon: `<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
+                </svg>`
+            };
+        default:
+            return {
+                bg: 'bg-gray-100',
+                text: 'text-gray-600',
+                icon: `<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 3v2m6-2v2M9 19v2m6-2v2M5 9H3m2 6H3m18-6h-2m2 6h-2M7 19h10a2 2 0 002-2V7a2 2 0 00-2-2H7a2 2 0 00-2 2v10a2 2 0 002 2zM9 9h6v6H9V9z" />
+                </svg>`
+            };
     }
 };
 ---
@@ -76,7 +92,7 @@ const getTypeStyle = (type: Update['type']) => {
                                             {update.type}
                                         </span>
                                     </div>
-                                    <p class="mt-1 text-gray-600">{update.description}</p>
+                                    <p class="mt-1 text-gray-600">{update.text}</p>
                                     <time class="mt-2 block text-sm text-gray-500">
                                         {format(new Date(update.date), 'MMMM d, yyyy')}
                                     </time>
@@ -126,3 +142,7 @@ const getTypeStyle = (type: Update['type']) => {
         </div>
     </main>
 </MainLayout>
+
+---
+return Astro.redirect('/updates/1');
+---
