Fixed the error baseUrl prop as it being passed as a function when the EventPagination component expects a string

--- a/src/pages/events/[...page].astro
+++ b/src/pages/events/[...page].astro
@@ -69,7 +69,7 @@ if (currentPage < 2) {
       <EventPagination 
         currentPage={validCurrentPage}
         totalPages={totalPages}
-        baseUrl={(page) => `/events/page/${page}`}
+        baseUrl="/events/[page]"
       />
     )}
   </main>
