--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -2,6 +2,7 @@
 import Layout from './Layout.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import PageViewCounter from '../components/analytics/PageViewCounter.astro';
 
 interface Props {
 	title: string;
@@ -16,4 +17,5 @@ const { title } = Astro.props;
     <slot />
   </main>
   <Footer />
+  <PageViewCounter />
 </Layout>
